--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,16 @@
                 border-radius: 5px;
                 box-shadow: 0 2px 5px rgba(0,0,0,0.1);
             }
+            #intro h3 {
+                margin-bottom: 10px;
+                font-size: 2rem;
+                color: #141414;
+            }
+            #intro p {
+                font-size: 1.2rem;
+                max-width: 600px;
+                margin: 0 auto;
+            }
             /* Hotkeys */
             .hotkeys {
                 margin-top: 2.5rem;
