--- a/styles.css
+++ b/styles.css
@@ -274,3 +274,50 @@
                 color: var(--text-color);
             }
 
+             /*Features Section */
+            #features {
+                margin: 2rem 0;
+                border-radius: 5px;
+                border-color:#EAE8E2;
+                padding: 2rem;
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                gap: 2rem;  
+            }
+            #features h2 {
+                grid-column: span 2;
+                text-align: center;
+                margin-bottom: 1rem;
+            }
+            .divFeature {
+                background-color: white;
+                padding: 1.5rem;
+                border: 2px solid #EAE8E2;
+                border-radius: 5px;
+                box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+                text-align: center;
+                transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
+                justify-content: space-between;
+                display: flex;
+                flex-direction: column;
+                cursor: pointer;
+                min-height: 350px;
+            }
+            .divFeature:hover {
+                box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+                transform: translateY(-5px);
+                border-color: #E7C65E;
+            }
+            .divFeature h2 {
+                margin-bottom: 0.5rem;
+                color: #1e1e1e;
+                font-size: 1.5rem;
+            }
+            .divFeatureImg {
+                width: 100%;
+                height: 400px;
+                object-fit: cover;
+                border-radius: 5px;
+                transition: transform 0.3s ease;
+            }
+
